# PACMAN

./: .codecov.yml  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  ci_windows.yml  docs.yml  joss.yml  workflow.yml  workflow2.yml
data/LD_coefficients/: ld_exoctk_online_output.txt
data/run_files/: pacman_script.py
data/stellar_models/k93models/: file_list.txt
docs/: requirements.txt
docs/source/: api.rst  astroquery_visits.ipynb  before_running.rst  conf.py  contact.rst  directories.rst  download_data.rst  example_introduction.rst  faq.rst  index.rst  installation.rst  models.rst  obs_par.ecf  outputs.rst  pcf.rst  quickstart.rst  stage00.rst  stage01.rst  stage02.rst  stage03.rst  stage10.rst  stage20.rst  stage21.rst  stage30.rst  stages.rst
docs/source/.ipynb_checkpoints/: astroquery_visits-checkpoint.ipynb
docs/source/media/: filelist_updated.txt  fit_par.txt  obs_par.pcf
fit/: parse_white_mcmc.py  run.py
fit/config/: fit_par.txt  obs_par.txt
fit/pipeline/: formatter.py.bak  functions.py  least_squares.py  least_squares.py.bak  model.py  nested.py  plot_data.py  read_data.py
fit/pipeline/models/: ackbar.py  constant.py  divide_white.py  eclipse.py  polynomial1.py  polynomial2.py  transit.py.bak  upstream_downstream.py
fit/util/: gaussfitter.py
joss/: metadata.yaml  paper.bib  paper.md
pacman/ancil/bandpass/: bandpass_downloader.py  bandpass_g141.txt
pacman/lib/: __init__.py  functions.py  horizons_old.pl  least_squares.py  mcmc.py  optextr.py  plots.py  read_data.py  read_pcf.py  stellar_spectrum.py  update_meta.py  util.py
pacman/reduction/: __init__.py  s00_table.py  s01_horizons.py  s02_barycorr.py  s03_refspectra.py  s10_direct_images.py  s20_extract.py  s21_bin_spectroscopic_lc.py  s21_ld_inputmaker.py  s22_bin_spectroscopic_lc.py  s30_run.py
pacman/run_files/: fit_par.txt  obs_par.pcf  pacman_script.py  run_pacman.py
pacman/tests/: test_all.py  unittest_test.py
pacman/tests/data/: README.txt  README_filelist.txt  ibxy01z8q_ima.fits
pacman/tests/run/: obs_par.pcf
pacman/tests/run_files/: fit_par.txt  obs_par.pcf
pacmann/: __init__.py
pacmann/ancil/LD_coefficients/: ExoXTK_results.txt
pacmann/lib/: geometry.py  geometry102.py  manageevent.py  mcmc.py  read_data.py  stellar_spectrum.py  suntimecorr_old.py  util.py
reduction/: 0.py  01_horizons_downloader.py  02.py  02_table_barycorr.py  03_throughput.py  04_stellar_model.py  1.py  10_direct_images.py  2.py  20_extract.py  21_ld_exoctk.py  21_ld_exoctk_online.py  2_extract.py  3.py  bin_spectroscopic_lc.py  cleanup  extract.py  optextr.py  run.py  zero_extract.py
reduction/bjd_conversion/: horizons_results_v0.txt  horizons_results_v1.txt  horizons_results_v2.txt  horizons_results_v3.txt
reduction/config/: filelist.txt  files.pic  fit_par (copy).txt  fit_par.txt  obs_par.txt  obs_par.yaml  tstart.txt  xrefyref.txt
reduction/extracted_lc/: lc.py
reduction/limb-darkening/: get_lds.py
reduction/not_used/: L89-59-exp0.txt  L89-59-exp1.txt  L89-59-exp2.txt  comp.py  lc.py  parse_spec_mcmc.py
reduction/util/: ancil.py  formatter.py  gaussfitter.py  mcmc.py  mpfit.py  plot_data.py  read_data.py  suntimecorr.py  util.py
run/: fit_par.txt  fit_par_new2.txt  obs_par.ecf  obs_par.pcf  run_pacman.py  run_wfc3.py  run_wfc3_0.py  run_wfc3_00.py  run_wfc3_01.py  run_wfc3_02.py  run_wfc3_03.py  run_wfc3_1.py  run_wfc3_2.py  run_wfc3_21.py  run_wfc3_22.py  run_wfc3_3.py  run_wfc3_all.py  run_wfc3_fit_par.py
run/run_2021-08-21_02-00-29_L-98-59_Hubble15856/: filelist.txt  fit_par_new2.txt  obs_par.ecf
run/run_2021-08-21_02-00-29_L-98-59_Hubble15856_spec/: fit_par_new2.txt  obs_par.ecf  xrefyref.txt
src/pacman/: __init__.py  s00_table.py  s01_horizons.py  s02_barycorr.py  s03_refspectra.py  s10_direct_images.py  s20_extract.py  s21_bin_spectroscopic_lc.py  s22_ld_inputmaker.py  s30_run.py
src/pacman/lib/: __init__.py  (+30 more)
tests/: __init__.py  test_all.py
tests/data/: ibxy07p9q_ima.fits
tests/pacman_run_files/: fit_par.txt  obs_par.pcf
tests/run_files/: fit_par.txt  obs_par.pcf
tests/run_files_unix/: obs_par.pcf
tests/run_files_windows/: obs_par.pcf
wfc3_reduction/: README  cleanup  mpfit.py  read_nested.py
wfc3_reduction/lib/: __init__.py  ancil.py  formatter.py  gaussfitter.py  horizons.py  least_squares.py  mcmc.py  model.py  nested.py  plot_data.py  plots.py  read_data.py  reload_meta.py  stellar_spectrum2.py  suntimecorr.py  triangle.py  util.py
wfc3_reduction/reduction/: __init__.py  s00_table.py  s01_horizons.py  s02_barycorr.py  s03_refspectra.py  s10_direct_images.py  s20_extract.py  s21_ld_inputmaker.py  s22_bin_spectroscopic_lc.py  s30_run.py  test.py
(+175 files in other folders)
