[metadata]
name = pacman
version = 0.0.1
author = Sebastian Zieba
author_email = zieba@mpia.de
description = Pipeline for reduction and analysis of HST/WFC3 G102 and G141 data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/mpi-astronomy/mpia-python-template
project_urls =
  Bug Tracker = https://github.com/mpi-astronomy/mpia-python-template/issues
  Sourse Code = https://github.com/mpi-astronomy/mpia-python-template
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
  importlib-metadata >= 2.0 ; python_version < "3.8"
  numpy
  scipy
  matplotlib
  astropy
  emcee
  corner
  dynesty
  batman-package
  seaborn
  h5py
  pyyaml
  tqdm
  uncertainties
  #ipython_genutils

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  nbsphinx
  sphinx-automodapi
  numpydoc
  myst_parser
  recommonmark
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov

[options.data_files]
  stellar_models/ck04models = data/stellar_models/ck04models/file_list.txt
  stellar_models/k93models = data/stellar_models/k93models/file_list.txt
  stellar_models/phoenix = data/stellar_models/phoenix/file_list.txt
  bandpass = data/bandpass/*
  LD_coefficients = data/LD_coefficients/*
  flats = data/flats/*
  run_files = data/run_files/*
