[metadata]
name = pacman
version = 0.4.0
author = Sebastian Zieba
author_email = zieba@mpia.de
description = Pipeline for reduction and analysis of HST/WFC3 G102 and G141 data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/sebastian-zieba/PACMAN
project_urls =
  Bug Tracker = https://github.com/sebastian-zieba/PACMAN/issues
  Source Code = https://github.com/sebastian-zieba/PACMAN
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  =src
packages = find:
include_package_data = true
python_requires = >=3.11,<3.14

install_requires =
  numpy>=1.20,<2
  scipy
  matplotlib
  astropy
  emcee
  corner
  dynesty
  batman-package @ git+https://github.com/PriyadarshiAkshay/batman.git@py13
  seaborn
  h5py
  pyyaml
  tqdm
  uncertainties
  celerite

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  nbsphinx
  sphinx-automodapi
  numpydoc
  myst_parser
  recommonmark
  sphinx_rtd_theme
  pandoc
  sphinx-gallery
  nbconvert
  ipython_genutils
test =
  pytest
  pytest-doctestplus
  flake8
  pytest-cov
  photutils
  astroquery
  pytest-ordering

[options.package_data]
pacman = 
   data/stellar_models/ck04models/file_list.txt
   data/stellar_models/k93models/file_list.txt
   data/stellar_models/phoenix/file_list.txt
   data/bandpass/*
   data/flats/*
   data/run_files/*
